@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `../config/PropertyNames.def', Tue Feb 20 11:10:03 2007
+// Generated by makeprops.py from file `../config/PropertyNames.def', Wed May 23 12:19:38 2007
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -89,6 +89,8 @@ public final class PropertyNames
         "^Ice\\.Trace\\.Slicing$",
         "^Ice\\.UDP\\.RcvSize$",
         "^Ice\\.UDP\\.SndSize$",
+        "^Ice\\.TCP\\.RcvSize$",
+        "^Ice\\.TCP\\.SndSize$",
         "^Ice\\.UseEventLog$",
         "^Ice\\.UseSyslog$",
         "^Ice\\.Warn\\.AMICallback$",
